--- a/regression models course project/reg_mod_courseproject.Rmd
+++ b/regression models course project/reg_mod_courseproject.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(message = FALSE)
 source("../regression models course project/analysis.R")
 ```
 # Executive summary
+Linear regression analysis was performed on the mtcars data to understand which car characteristics have an impact on miles per gallon (MPG). The most accurate model was found to be `mpg ~ wt + as.factor(cyl)` which had an adjusted R^2 value of 0.82 (Model 1). We compared that model with a model that also contained transmission type and found that transmission type only accounted for `r dif`% of the variation in the outcome, MPG (Model 2). In Model A, for every 1,000 pound increase in vehicle weight, the MPG decrease by 3.21 (p<0.001, 95% CI[-4.75 – -1.66]). When compared to four cylinder engines, six cylinder engines decrease MPG by 4.26 MPG (p=0.005, 95% CI[-7.09 – -1.42]) and eight cylinder engines decrease MPG by 6.07 MPG (p=0.001, 95% CI[-9.46 – -2.69]). In model 2, there is no statistically significant difference in MPG between automatic and manual transmissions when weight and number of cylinders are held constant (p=0.9, 95% CI[-2.52 – 2.82]). Transmission type does not have a significant impact on MPG, but weight and number of cylinders do impact MPG in this dataset.    
 
 ---
 
@@ -30,9 +31,6 @@ Research shows that there are a number of factors that affect fuel economy in ve
 
 We will be using the mtcars data set provided with the R statistical package. The data are from a 1974 edition of Motor Trend magazine and is comprised of fuel consumption and 10 aspects of automobile design and performance for 32 automobiles, all of them 1973-74 models.  
 
-- The 'mtcars' dataset has `r dim[1]` observations and `r dim[2]` variables.
-- The data dictionary can be found by typing the following into the console: **?mtcars**
-
 We used nested likelihood ratio tests (ANOVA) to help find the model that best explains variation in MPG in this data.  We conducted linear regression using the model derived from the step-wise model search. The final model did not include transmission type. However, because the client is interested in transmission type, we developed two models, one best fit and one best fit including transmission type. After finding the best fitting model with the available data, we then evaluated the relationship between weight and transmission type. We generated a box plot and compared mean weights of cars with a manual transmission versus automatic transmission using a t-test. 
 
 We then produced a series of four diagnostic plots: 1) residuals vs fitted, 2) scale-location, 3) normal Q-Q, and 4) residuals vs leverage and examined them to evaluate the fit and residuals of the linear model. 
@@ -43,30 +41,23 @@ Lastly, we ran the model, which included transmission type to evaluate the relat
 
 # Results
 
-The results of the likelihood ratio tests suggested that the model that captured the majority of the variability in the data is: `mpg ~ wt + as.factor(cyl)`. With this model, `r r`% of the variation in MPG is explained by both the weight of the vehicle and the number of cylinders. However, only `r dif2`% of the variation in MPG is explained by the number of cylinders, meaning the majority of the variation is explained by the weight of the vehicle. We also added transmission type into the model and found that only `r dif`% of the variation in MPG is explained by transmission type.
+The results of the likelihood ratio tests suggested that the model that captured the majority of variability in the data is: `mpg ~ wt + as.factor(cyl)`. With this model, `r r`% of the variation in MPG is explained by both the weight of the vehicle and the number of cylinders. However, only `r dif2`% of the variation in MPG is explained by the number of cylinders, meaning the majority of the variation is explained by the weight of the vehicle. We also added transmission type into the model and found that only `r dif`% of the variation in MPG is explained by transmission type.
 
-In this dataset, cars with a manual transmission are heavier than cars with an automatic transmission. Manual transmission cars have a mean weight of `r mean_a` pounds and automatic transmission cars have a mean weight of `r mean_b` pounds, a statistically significant difference (p = `r pval`). See Figure \@ref(fig:cars-plot).
+In this dataset, cars with a manual transmission are heavier than cars with an automatic transmission. Manual transmission cars have a mean weight of `r mean_a` pounds and automatic transmission cars have a mean weight of `r mean_b` pounds, a statistically significant difference (p = `r pval`). See Figure \@ref(fig:cars-plot). 
 
-The four diagnostic plots show...
+The four diagnostic plots show that model appears to fit the data relatively well. See Figure \@ref(fig:resid) The potentially influential observations of the formula `lm(formula = mpg ~ wt + as.factor(cyl) + as.factor(am), data = mtcars)` include the Lincoln Continental and the Toyota Corolla. 
 
 Linear regression results show that for every 1,000 pound increase in weight, miles per gallon decrease by 3.15 (p=0.002). Additionally, a car with six cylinders gets 4.26 MPG less (p=0.006) and a car with eight cylinders gets 6.08 MPG less (p=0.001) when compared to cars with four cylinders. There is no statistically significant difference in MPG between automatic and manual transmissions when weight and number of cylinders are held constant (p=0.9). See Figure \@ref(fig:plot).  
 
-```{r plot, fig.cap="Linear regression results.", echo=FALSE, out.width="65%", fig.align = 'center'}
-plot_summs(fit, fit2, scale = TRUE)
+```{r plot, fig.cap="Linear regression results.", echo=FALSE, out.width="45%", fig.align = 'center'}
+plot_summs(fit, fit2, robust = "HC3", coefs = coef_names )
 ```
-
-
-# Discussion
-We know that heavier cars get lower gas mileage. I think that the transmission variable is co-linear with weight and actually measuring the same thing as weight. Much of the difference seen when looking at MPG by transmission type is actually due to the weight of the vehicle. 
-
-# Conclusion
-
 
 \newpage
 
 # Appendix
 
-```{r corr, fig.cap="Correlation between various indicators and MPG", echo=FALSE, out.width="65%", fig.align = 'center'}
+```{r corr, fig.cap="Correlation between various indicators and MPG", echo=FALSE, out.width="55%", fig.align = 'center'}
 data <- mtcars[ , c(1, 2, 3, 4, 5, 6, 9)]
 corr <- chart.Correlation(data, histogram=TRUE, pch=19)
 ```
@@ -85,7 +76,7 @@ bp + p
 step(fit0, k = log(nrow(mtcars)))
 ```
 
-```{r resid, fig.cap="Residual plots for model diagnostics", echo=FALSE, out.width="75%", fig.align = 'center'}
+```{r resid, fig.cap="Residual plots for model diagnostics", echo=FALSE, out.width="65%", fig.align = 'center'}
 par(mfrow = c(2, 2)); plot(fit)
 ```
 
@@ -93,9 +84,7 @@ par(mfrow = c(2, 2)); plot(fit)
 summary(inflm.SR) 
 ```
 
-\newpage
-
-```{r tab, fig.cap="Potential influential points.", echo=FALSE, out.width="75%", fig.align = 'center'}
+```{r table, fig.cap="Table of regression results.", echo=FALSE, out.width="45%", fig.align = 'center'}
 export_summs(fit, fit2,
              error_format = "[{conf.low}, {conf.high}]")
 ```
